# Termip

./: Cargo.toml  changelog.md  compatibility.md  readme.md  rust-analyzer.toml
examples/: backend.rs  cursor.rs  cursor_position.rs  cursor_visibility.rs  events.rs  game_of_life.rs  move_cursor.rs  single_event.rs  size.rs  style.rs  test.rs
src/: events.rs  key.rs  lib.rs  style.rs  terminal.rs
src/events/: mod.rs  unix.rs  windows.rs
src/parse/: mod.rs  unix.rs
src/terminal/: mod.rs  unix.rs
src/utils/: mod.rs  unix.rs  windows.rs
