[package]
name = "termip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "fileapi", "winbase", "winuser", "wincon"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.146"
