[package]
name = "termip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "fileapi", "winbase", "winuser", "wincon"] }

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.146"
